--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js" type="module"></script>
+    
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 
@@ -88,6 +89,6 @@
         <div class="white"><img src="./images/white-knight.png" alt="WN"></div>
         <div class="black"><img src="./images/white-rook.png" alt="WR"></div>
     </div>
-
+<script src="./script.js" type="module"></script>
 </body>
 </html>
