--- a/index.html
+++ b/index.html
@@ -2,93 +2,120 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    
-    <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chess Board</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    .captured {
+      display: flex;
+      flex-wrap: wrap;
+      width: 680px;
+      margin: 10px auto;
+      min-height: 60px;
+    }
+
+    .captured img {
+      width: 50px;
+      height: 50px;
+      margin: 2px;
+    }
+  </style>
 </head>
 
 <body>
-    <div class="chess-board">
-        <!-- Row 1 -->
-        <div class="black"><img src="./images/black-rook.png" alt="BR"></div>
-        <div class="white"><img src="./images/black-knight.png" alt="BN"></div>
-        <div class="black"><img src="./images/black-bishop.png" alt="BB"></div>
-        <div class="white"><img src="./images/black-queen.png" alt="BQ"></div>
-        <div class="black"><img src="./images/black-king.png" alt="BK"></div>
-        <div class="white"><img src="./images/black-bishop.png" alt="BB"></div>
-        <div class="black"><img src="./images/black-knight.png" alt="BN"></div>
-        <div class="white"><img src="./images/black-rook.png" alt="BR"></div>
 
-        <!-- Row 2 -->
-        <div class="white"><img src="./images/black-pawn.png" alt="BP"></div>
-        <div class="black"><img src="./images/black-pawn.png" alt="BP"></div>
-        <div class="white"><img src="./images/black-pawn.png" alt="BP"></div>
-        <div class="black"><img src="./images/black-pawn.png" alt="BP"></div>
-        <div class="white"><img src="./images/black-pawn.png" alt="BP"></div>
-        <div class="black"><img src="./images/black-pawn.png" alt="BP"></div>
-        <div class="white"><img src="./images/black-pawn.png" alt="BP"></div>
-        <div class="black"><img src="./images/black-pawn.png" alt="BP"></div>
+  <!-- Captured pieces by Black (White pieces) -->
+  <div class="captured white-captured"></div>
 
-        
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
+  <div class="board">
 
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
+    <!-- Row 1 - Black main pieces -->
+    <div class="dark"><img src="./Images/black-rook.png"></div>
+    <div class="light"><img src="./Images/black-knight.png"></div>
+    <div class="dark"><img src="./Images/black-bishop.png"></div>
+    <div class="light"><img src="./Images/black-queen.png"></div>
+    <div class="dark"><img src="./Images/black-king.png"></div>
+    <div class="light"><img src="./Images/black-bishop.png"></div>
+    <div class="dark"><img src="./Images/black-knight.png"></div>
+    <div class="light"><img src="./Images/black-rook.png"></div>
 
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
+    <!-- Row 2 - Black pawns -->
+    <div class="light"><img src="./Images/black-pawn.png"></div>
+    <div class="dark"><img src="./Images/black-pawn.png"></div>
+    <div class="light"><img src="./Images/black-pawn.png"></div>
+    <div class="dark"><img src="./Images/black-pawn.png"></div>
+    <div class="light"><img src="./Images/black-pawn.png"></div>
+    <div class="dark"><img src="./Images/black-pawn.png"></div>
+    <div class="light"><img src="./Images/black-pawn.png"></div>
+    <div class="dark"><img src="./Images/black-pawn.png"></div>
 
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="white"></div>
-        <div class="black"></div>
+    <!-- Row 3 -->
+    <div class="dark"></div>
+    <div class="light"></div>
+    <div class="dark"></div>
+    <div class="light"></div>
+    <div class="dark"></div>
+    <div class="light"></div>
+    <div class="dark"></div>
+    <div class="light"></div>
 
-        <!-- Row 7 -->
-        <div class="black"><img src="./images/white-pawn.png" alt="WP"></div>
-        <div class="white"><img src="./images/white-pawn.png" alt="WP"></div>
-        <div class="black"><img src="./images/white-pawn.png" alt="WP"></div>
-        <div class="white"><img src="./images/white-pawn.png" alt="WP"></div>
-        <div class="black"><img src="./images/white-pawn.png" alt="WP"></div>
-        <div class="white"><img src="./images/white-pawn.png" alt="WP"></div>
-        <div class="black"><img src="./images/white-pawn.png" alt="WP"></div>
-        <div class="white"><img src="./images/white-pawn.png" alt="WP"></div>
+    <!-- Row -4 -->
+    <div class="light"></div>
+    <div class="dark"></div>
+    <div class="light"></div>
+    <div class="dark"></div>
+    <div class="light"></div>
+    <div class="dark"></div>
+    <div class="light"></div>
+    <div class="dark"></div>
 
-        <!-- Row 8 -->
-        <div class="white"><img src="./images/white-rook.png" alt="WR"></div>
-        <div class="black"><img src="./images/white-knight.png" alt="WN"></div>
-        <div class="white"><img src="./images/white-bishop.png" alt="WB"></div>
-        <div class="black"><img src="./images/white-queen.png" alt="WQ"></div>
-        <div class="white"><img src="./images/white-king.png" alt="WK"></div>
-        <div class="black"><img src="./images/white-bishop.png" alt="WB"></div>
-        <div class="white"><img src="./images/white-knight.png" alt="WN"></div>
-        <div class="black"><img src="./images/white-rook.png" alt="WR"></div>
-    </div>
-<script src="./script.js" type="module"></script>
+    <!-- Row 5 -->
+    <div class="dark"></div>
+    <div class="light"></div>
+    <div class="dark"></div>
+    <div class="light"></div>
+    <div class="dark"></div>
+    <div class="light"></div>
+    <div class="dark"></div>
+    <div class="light"></div>
+
+    <!-- Row 6 -->
+    <div class="light"></div>
+    <div class="dark"></div>
+    <div class="light"></div>
+    <div class="dark"></div>
+    <div class="light"></div>
+    <div class="dark"></div>
+    <div class="light"></div>
+    <div class="dark"></div>
+
+    <!-- Row 7 - White pawns -->
+    <div class="dark"><img src="./Images/white-pawn.png"></div>
+    <div class="light"><img src="./Images/white-pawn.png"></div>
+    <div class="dark"><img src="./Images/white-pawn.png"></div>
+    <div class="light"><img src="./Images/white-pawn.png"></div>
+    <div class="dark"><img src="./Images/white-pawn.png"></div>
+    <div class="light"><img src="./Images/white-pawn.png"></div>
+    <div class="dark"><img src="./Images/white-pawn.png"></div>
+    <div class="light"><img src="./Images/white-pawn.png"></div>
+
+    <!-- Row 8 - White main pieces -->
+    <div class="light"><img src="./Images/white-rook.png"></div>
+    <div class="dark"><img src="./Images/white-knight.png"></div>
+    <div class="light"><img src="./Images/white-bishop.png"></div>
+    <div class="dark"><img src="./Images/white-queen.png"></div>
+    <div class="light"><img src="./Images/white-king.png"></div>
+    <div class="dark"><img src="./Images/white-bishop.png"></div>
+    <div class="light"><img src="./Images/white-knight.png"></div>
+    <div class="dark"><img src="./Images/white-rook.png"></div>
+
+  </div>
+
+  <!-- Captured pieces by White (Black pieces) -->
+  <div class="captured black-captured"></div>
+
+  <script type="module" src="./script.js"></script>
 </body>
+
 </html>
