--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
   <div class="board">
 
     <!-- Row 1 - Black main pieces -->
-    <div class="dark"><img src="./Images/black-rook.png"></div>
-    <div class="light"><img src="./Images/black-knight.png"></div>
-    <div class="dark"><img src="./Images/black-bishop.png"></div>
-    <div class="light"><img src="./Images/black-queen.png"></div>
-    <div class="dark"><img src="./Images/black-king.png"></div>
-    <div class="light"><img src="./Images/black-bishop.png"></div>
-    <div class="dark"><img src="./Images/black-knight.png"></div>
-    <div class="light"><img src="./Images/black-rook.png"></div>
+    <div class="dark"><img src="./Images/black-rook.png" alt="black-rook"></div>
+    <div class="light"><img src="./Images/black-knight.png" alt="black-knight"></div>
+    <div class="dark"><img src="./Images/black-bishop.png" alt="black-bishop"></div>
+    <div class="light"><img src="./Images/black-queen.png" alt="black-queen"></div>
+    <div class="dark"><img src="./Images/black-king.png" alt="black-king"></div>
+    <div class="light"><img src="./Images/black-bishop.png" alt="black-bishop"></div>
+    <div class="dark"><img src="./Images/black-knight.png" alt="black-knight"></div>
+    <div class="light"><img src="./Images/black-rook.png" alt="black-rook"></div>
 
     <!-- Row 2 - Black pawns -->
-    <div class="light"><img src="./Images/black-pawn.png"></div>
-    <div class="dark"><img src="./Images/black-pawn.png"></div>
-    <div class="light"><img src="./Images/black-pawn.png"></div>
-    <div class="dark"><img src="./Images/black-pawn.png"></div>
-    <div class="light"><img src="./Images/black-pawn.png"></div>
-    <div class="dark"><img src="./Images/black-pawn.png"></div>
-    <div class="light"><img src="./Images/black-pawn.png"></div>
-    <div class="dark"><img src="./Images/black-pawn.png"></div>
+    <div class="light"><img src="./Images/black-pawn.png" alt="black-pawn"></div>
+    <div class="dark"><img src="./Images/black-pawn.png" alt="black-pawn"></div>
+    <div class="dark"><img src="./Images/black-pawn.png" alt="black-pawn"></div>
+    <div class="dark"><img src="./Images/black-pawn.png" alt="black-pawn"></div>
+    <div class="light"><img src="./Images/black-pawn.png" alt="black-pawn"></div>
+    <div class="dark"><img src="./Images/black-pawn.png" alt="black-pawn"></div>
+    <div class="light"><img src="./Images/black-pawn.png" alt="black-pawn"></div>
+    <div class="dark"><img src="./Images/black-pawn.png" alt="black-pawn"></div>
 
     <!-- Row 3 -->
     <div class="dark"></div>
@@ -91,24 +91,24 @@
     <div class="dark"></div>
 
     <!-- Row 7 - White pawns -->
-    <div class="dark"><img src="./Images/white-pawn.png"></div>
-    <div class="light"><img src="./Images/white-pawn.png"></div>
-    <div class="dark"><img src="./Images/white-pawn.png"></div>
-    <div class="light"><img src="./Images/white-pawn.png"></div>
-    <div class="dark"><img src="./Images/white-pawn.png"></div>
-    <div class="light"><img src="./Images/white-pawn.png"></div>
-    <div class="dark"><img src="./Images/white-pawn.png"></div>
-    <div class="light"><img src="./Images/white-pawn.png"></div>
+    <div class="dark"><img src="./Images/white-pawn.png" alt="white-pawn"></div>
+    <div class="dark"><img src="./Images/white-pawn.png" alt="white-pawn"></div>
+    <div class="dark"><img src="./Images/white-pawn.png" alt="white-pawn"></div>
+    <div class="dark"><img src="./Images/white-pawn.png" alt="white-pawn"></div>
+    <div class="dark"><img src="./Images/white-pawn.png" alt="white-pawn"></div>
+    <div class="dark"><img src="./Images/white-pawn.png" alt="white-pawn"></div>
+    <div class="dark"><img src="./Images/white-pawn.png" alt="white-pawn"></div>
+    <div class="dark"><img src="./Images/white-pawn.png" alt="white-pawn"></div>
 
     <!-- Row 8 - White main pieces -->
-    <div class="light"><img src="./Images/white-rook.png"></div>
-    <div class="dark"><img src="./Images/white-knight.png"></div>
-    <div class="light"><img src="./Images/white-bishop.png"></div>
-    <div class="dark"><img src="./Images/white-queen.png"></div>
-    <div class="light"><img src="./Images/white-king.png"></div>
-    <div class="dark"><img src="./Images/white-bishop.png"></div>
-    <div class="light"><img src="./Images/white-knight.png"></div>
-    <div class="dark"><img src="./Images/white-rook.png"></div>
+    <div class="light"><img src="./Images/white-rook.png" alt="white-rook"></div>
+    <div class="dark"><img src="./Images/white-knight.png" alt="white-knight"></div>
+    <div class="light"><img src="./Images/white-bishop.png" alt="white-bishop"></div>
+    <div class="dark"><img src="./Images/white-queen.png" alt="white-queen"></div>
+    <div class="light"><img src="./Images/white-king.png" alt="white-king"></div>
+    <div class="dark"><img src="./Images/white-bishop.png" alt="white-bishop"></div>
+    <div class="light"><img src="./Images/white-knight.png" alt="white-knight"></div>
+    <div class="dark"><img src="./Images/white-rook.png" alt="white-rook"></div>
 
   </div>
 
