--- a/index.html
+++ b/index.html
@@ -172,7 +172,11 @@
     </div>
   </div>
 
-  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    // Replace with your deployed backend URL (e.g., https://your-backend.onrender.com)
+    window.SOCKET_SERVER_URL = "";
+  </script>
+  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" crossorigin="anonymous"></script>
   <script type="module" src="./script.js"></script>
 </body>
 
