Point frontend to Render backend

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
   <script>
     // Replace with your deployed backend URL (e.g., https://your-backend.onrender.com)
-    window.SOCKET_SERVER_URL = "";
+    window.SOCKET_SERVER_URL = "https://chess-board-ufj9.onrender.com";
   </script>
   <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" crossorigin="anonymous"></script>
   <script type="module" src="./script.js"></script>
