Add online presence, kicks, and synced captures

--- a/index.html
+++ b/index.html
@@ -149,6 +149,16 @@
           <div id="roomInfo" class="room-info"></div>
           <button id="helpBtn" class="btn ghost">How to Play Online</button>
         </div>
+        <div id="presence" class="presence">
+          <p class="presence-title">Room Status</p>
+          <div class="presence-stats">
+            <span id="playersCount">Players: 0/2</span>
+            <span id="spectatorsCount">Spectators: 0</span>
+          </div>
+          <div id="spectatorList" class="spectator-list"></div>
+          <button id="kickBlackBtn" class="btn ghost">Remove Black</button>
+          <button id="kickSpectatorsBtn" class="btn ghost">Kick Spectators</button>
+        </div>
       </aside>
     </section>
   </main>
